--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,7 +87,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, to wind* my caution cast
+                            My sight is the sea, to wind my caution cast*
                             <br>
                             And in this doing, my heart to sea cast
                             <p>&nbsp; </p>
