--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,29 +87,29 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, to wind my caution cast*
+                            My sight is the sea, as to past my patience I cast*
                             <br>
-                            And in this doing, my heart to sea cast
+                            And in this labor, then my heart to the sea I cast
                             <p>&nbsp; </p>
-                            From this yearning, sinner’s heart I heave a sigh
+                            From this yearning, sinner’s heart I heave thus such a sigh
                             <br>
                             That upon the sins of Adam and Eve fire cast
                             <p>&nbsp; </p>
                             The spring of joy is there, where the beloved is there
                             <br>
-                            I make haste that I may myself to there cast
+                            I make haste that I may from here my place to there cast
                             <p>&nbsp; </p>
-                            Release the binding of your robe, oh sun-crowned moon
+                            Release the binding of your robe, oh you sun-crowned moon
                             <br>
                             That at fall of your hair I may my fervent head cast
                             <p>&nbsp; </p>
-                            Stricken by an arrow of heaven, pour me wine to bliss
+                            Struck by an arrow of heaven, pour me wine to bliss
                             <br>
-                            A knot into the belt of Gemini's quiver I cast
+                            A knot to the belt of Gemini's quiver I cast
                             <p>&nbsp; </p>
-                            A sip of wine I spill upon this palanquin
+                            A sip of wine I spill then upon this palanquin
                             <br>
-                            A harp’s twang into this azure dome I cast
+                            And a harp’s twang into this azure dome I cast
                             <p>&nbsp; </p>
                             Hafez, it is a fault and error to lean on time
                             <br>
@@ -162,7 +162,7 @@
                         }
                     </style>
 
-                    <h4>*The direct translation of this part is: "throw patience to the desert" </h4>
+                    <h4>*The direct translation of the 2nd part of this line is: "throw patience to the desert" </h4>
                     <br>
                     <h3>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
                     <br>
