--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,17 +87,17 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, as to past my patience I cast*
+                            My sight is the sea, as to past my patience cast*
                             <br>
-                            And in this labor, then my heart to the sea I cast
+                            And in this doing, then my heart to the sea cast
                             <p>&nbsp; </p>
-                            From this yearning, sinner’s heart I heave thus such a sigh
+                            From this yearning, sinner’s heart I heave such a sigh
                             <br>
                             That upon the sins of Adam and Eve fire cast
                             <p>&nbsp; </p>
                             The spring of joy is there, where the beloved is there
                             <br>
-                            I make haste that I may from here my place to there cast
+                            I make haste that I may from my place to there cast
                             <p>&nbsp; </p>
                             Release the binding of your robe, oh you sun-crowned moon
                             <br>
@@ -107,9 +107,9 @@
                             <br>
                             A knot to the belt of Gemini's quiver I cast
                             <p>&nbsp; </p>
-                            A sip of wine I spill then upon this palanquin
+                            A sip of wine I spill upon this palanquin
                             <br>
-                            And a harp’s twang into this azure dome I cast
+                            A harp’s twang into this azure dome I cast
                             <p>&nbsp; </p>
                             Hafez, it is a fault and error to lean on time
                             <br>
