--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -89,15 +89,15 @@
                         <div class="text2">
                             My sight is the sea, as to past my patience cast*
                             <br>
-                            And in this doing thus my heart to the sea cast
+                            And in this doing, so my heart to the sea cast
                             <p>&nbsp; </p>
-                            From this yearning, sinner’s heart I heave then such a sigh
+                            From this yearning, sinner’s heart I heave such a sigh
                             <br>
-                            That upon the sins of Adam and Eve fire cast
+                            That upon the sins of Adam and Eve's fire cast
                             <p>&nbsp; </p>
                             The spring of joy is there, where the beloved is there
                             <br>
-                            I make haste that I may from my place to there be cast
+                            I make haste that I may myself be to there cast
                             <p>&nbsp; </p>
                             Release the binding of your robe, oh you sun-crowned moon
                             <br>
