--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -93,7 +93,7 @@
                             <p>&nbsp; </p>
                             From this yearning, sinner’s heart I heave such a sigh
                             <br>
-                            That upon the sins of Adam and Eve's fire cast
+                            That upon the sins of Adam and Eve fire cast
                             <p>&nbsp; </p>
                             The spring of joy is there, where the beloved is there
                             <br>
