--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -107,7 +107,7 @@
                             <br>
                             A knot to the belt of Gemini's quiver I cast
                             <p>&nbsp; </p>
-                            A sip of wine I spill upon this palanquin
+                            A sip of drink I spill upon this palanquin
                             <br>
                             A harp’s twang into this azure dome I cast
                             <p>&nbsp; </p>
