--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          <div class="item item-2"> 
           <link href="./c_ellipse1.css" rel="stylesheet" />
           <img
-              src="./assets/ellipse1.svg"
+              src="./assets/Ellipse 1.svg"
 
               width="666"
               height="666"
@@ -118,7 +118,7 @@
 
               <link href="./c_ellipse2.css" rel="stylesheet" />
               <img
-              src="./assets/Ellipse 2(3).svg"
+              src="./assets/Ellipse 2.svg"
               
               width="645"
               height="666"
