--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          <div class="item item-2"> 
           <link href="./c_ellipse1.css" rel="stylesheet" />
           <img
-              src="./assets/Ellipse 1.svg"
+              src="./assets/Ellipse 1(1).svg"
 
               width="666"
               height="666"
