--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <div>
                 <link href="./c_ellipse4.css" rel="stylesheet" />
                 <img
-                  src="./assets/ellipse4.svg"
+                  src="./assets/Ellipse 4.svg"
                   width="80"
                   height="80"
                   class="c_ellipse4-ellipse"
@@ -361,7 +361,7 @@
                   />
                 <link href="./c_ellipse5.css" rel="stylesheet" />
                 <img
-                  src="./assets/ellipse5.svg"
+                  src="./assets/Ellipse 5.svg"
 
                   class="c_ellipse5-ellipse"
                   draggable="false"
@@ -370,7 +370,7 @@
 
                 <link href="./c_ellipse6.css" rel="stylesheet" />
                 <img
-                  src="./assets/ellipse6.svg"
+                  src="./assets/Ellipse 6.svg"
 
                   width="80"
                   height="80"
