--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
               <link href="./c_ellipse7.css" rel="stylesheet" />
               <img
-                src="./assets/ellipse7.svg"
+                src="./assets/Ellipse 7.svg"
               
                 width="46"
                 height="46"
