--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                   />
                 <link href="./c_ellipse5.css" rel="stylesheet" />
                 <img
-                  src="./assets/Ellipse 5.svg"
+                  src="./assets/ellipse5.svg"
 
                   class="c_ellipse5-ellipse"
                   draggable="false"
