--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,19 +87,19 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, as to past my patience cast*
+                            My sight is the sea, to past my patience cast*
                             <br>
-                            And in this doing, so my heart to the sea cast
+                            And in so doing, so my heart to sea cast
                             <p>&nbsp; </p>
-                            From this yearning, sinner’s heart I heave such a sigh
+                            From this yearning, sinner’s heart I heave a sigh
                             <br>
-                            That upon the sins of Adam and Eve fire cast
+                            Upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            The spring of joy is there, where the beloved is there
+                            The spring of joy is there, the beloved is there
                             <br>
-                            I make haste that I may myself be to there cast
+                            I make haste that I may myself be there cast
                             <p>&nbsp; </p>
-                            Release the binding of your robe, oh you sun-crowned moon
+                            Release the binding of your robe, oh sun-crowned moon
                             <br>
                             That at fall of your hair I may my fervent head cast
                             <p>&nbsp; </p>
