--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -93,7 +93,7 @@
                             <p>&nbsp; </p>
                             From this yearning, sinner’s heart I heave a sigh
                             <br>
-                            Upon the sin of Adam and Eve fire cast
+                            That 'pon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
                             The spring of joy is there, the beloved is there
                             <br>
