--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,15 +87,15 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            My sight is the sea, to past my patience cast*
+                            Sea that I sweep my sight past, aside my patience cast*
                             <br>
-                            And in so doing, so my heart to sea cast
+                            And in there doing, my heart to sea cast
                             <p>&nbsp; </p>
-                            From this yearning, sinner’s heart I heave a sigh
+                            From this yearning, sinner’s heart I heave thus a sigh
                             <br>
-                            That 'pon the sin of Adam and Eve fire cast
+                            That upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            The spring of joy is there, the beloved is there
+                            The source of joy is there, the beloved is there
                             <br>
                             I make haste that I may myself be there cast
                             <p>&nbsp; </p>
