--- a/text/translations/rumi-1759/index.html
+++ b/text/translations/rumi-1759/index.html
@@ -88,7 +88,7 @@
                             <br>
                             When will I see my self as I am?
                             <p>&nbsp; </p>
-                            You said, let secrets be the center of concern
+                            You said, ought secrets be center of talk
                             <br>
                             Where is center in this center that I am?
                             <p>&nbsp; </p>
