--- a/text/translations/rumi-1759/index.html
+++ b/text/translations/rumi-1759/index.html
@@ -104,7 +104,7 @@
                             <br>
                             For both are lost in the world that I am
                             <p>&nbsp; </p>
-                            Severed of profit and of loss, of aught 
+                            Severed of profit and of loss, as naught
                             <br>
                             To no profit and no loss that I am
                             <p>&nbsp; </p>
