--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -95,7 +95,7 @@
                             <br>
                             That upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            The source of joy is there, the beloved is there
+                            The source of joy is there, where the beloved is there
                             <br>
                             Make haste that may my self be to there cast
                             <p>&nbsp; </p>
