--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
                     unselectable="on"
                     />
                   </a>
-                    <img
+                    <!-- <img
                     src="./assets/taikoinfo.svg"
                     width="437"
                     height="541"
                     class="c_taikoinfo"
                     draggable="false"
                     unselectable="on"
-                    />
+                    /> -->
                   <!-- <img
                   src="./assets/taiko.svg"
                   width="58"
@@ -245,14 +245,14 @@
 
                   </a>
 
-                <img
+                <!-- <img
                 src="./assets/visualinfo.svg"
                 width="437"
                 height="541"
                 class="c_photoinfo"
                 draggable="false"
                 unselectable="on"
-                />
+                /> -->
 
                 </div>
                 <a href="/about/">
@@ -293,14 +293,14 @@
                   unselectable="on"
                   />
 
-                  <img
+                  <!-- <img
                   src="./assets/textinfo.svg"
                   width="437"
                   height="541"
                   class="c_writinginfo"
                   draggable="false"
                   unselectable="on"
-                  />
+                  /> -->
                 </a>
               </div>
 
@@ -309,14 +309,15 @@
                 <a href="/sound/music">
                 <div class="c_music3-instance">
                   <picture> 
-                    <source srcset="./assets/Headphone(1).svg" media="(max-width: 760px)">
+                    <source srcset="./assets/Headphone(3).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Headphone(1).svg"
-                    width="151"
-                    height="307"
+                    src="./assets/Headphone(3).svg"
+                    width="156"
+                    height="354"
                     class="c_music3-rectangle"
                     draggable="false"
                     unselectable="on"
+                   
                     />
                   </picture> 
                   <!-- <img
@@ -328,22 +329,22 @@
                   unselectable="on"
                   /> -->
                   <img
-                    src="./assets/Rectangle 4.svg"
-                    width="151"
-                    height="307"
+                    src="./assets/Rectangle 10.svg"
+                    width="156"
+                    height="354"
                     class="c_music3-rectangle1"
                     draggable="false"
                     unselectable="on"
                     />
                   </a>
-                  <img
+                  <!-- <img
                   src="./assets/musicinfo.svg"
                   width="437"
                   height="541"
                   class="c_musicinfo"
                   draggable="false"
                   unselectable="on"
-                  />
+                  /> -->
 
                 </div>
 
