--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,7 +87,7 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            Sea that I sweep gaze past, and aside my patience cast*
+                            Sea that I sweep gaze past, aside my patience cast*
                             <br>
                             And in there doing, my heart to sea cast
                             <p>&nbsp; </p>
