--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -87,17 +87,17 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            Sea that I sweep gaze past, aside my patience cast*
+                            Sea that I weep gaze past, aside my patience cast*
                             <br>
                             And in there doing, my heart to sea cast
                             <p>&nbsp; </p>
-                            From this yearning, sinner’s heart I heave thus a sigh
+                            From this yearning, sinner’s heart I heave a sigh
                             <br>
                             That upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            The source of joy is there where the beloved is there
+                            Joy's place is there where the beloved is there
                             <br>
-                            Make haste that I may myself be there cast
+                            I make haste that I may myself be to there cast
                             <p>&nbsp; </p>
                             Release the binding of your robe, oh sun-crowned moon
                             <br>
