--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -162,7 +162,7 @@
                         }
                     </style>
 
-                    <h4>*The direct translation of the 2nd part of this line is: "throw patience to the desert" </h4>
+                    <h4>*The direct translation of this line is: "I see the sea and throw patience to the desert" </h4>
                     <br>
                     <hr>
                     <br>
