--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 /> -->
 
                 </div>
-                <a href="/about/">
+                <!-- <a href="/about/">
                 <img
                 src="./assets/Group 15(3).svg"
                 class="c_about-text"
@@ -268,7 +268,7 @@
                 draggable="false"
               unselectable="on"
                 />
-              </a>
+              </a> -->
               </div>
               <div>
                 <link href="./c_text.css" rel="stylesheet" />
