--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -97,7 +97,7 @@
                             <p>&nbsp; </p>
                             Joy's place is there where the beloved is there
                             <br>
-                            I make haste that I may myself be to there cast
+                            I make haste that I may myself be there cast
                             <p>&nbsp; </p>
                             Release the binding of your robe, oh sun-crowned moon
                             <br>
