--- a/about/index.html
+++ b/about/index.html
@@ -74,9 +74,9 @@
                     <div class="gallery">
                         <img src="photos/P1080971-2.jpg">
                     </div>
-                    <p>Saam Hamidi —</p>
+                    <p>— Saam Hamidi</p>
                     <br>
-                    <p> Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
+                    <p>Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
                     <style>
                         p {
                             font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
