--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -75,10 +75,11 @@
                   
                     <style>
                         h4 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Lekton'; /* Change to the desired font */
                             text-align: left;
-                            font-size:0.8em;
-                            font-weight:normal;
+                            font-size: 0.75em;
+                            padding-top: 10px;
+                            font-weight: normal;
                         }
                     </style>
                     <p>&nbsp; </p>
@@ -150,7 +151,7 @@
 
                         
                     </div>
-                    <hr>
+                    <!-- <hr> -->
                     <br>
                     <!-- <center><h3>Translations by Saam Hamidi</h3></center> -->
                     <style>
@@ -162,13 +163,12 @@
                         }
                     </style>
 
-                    <h4>*The direct translation of this line is: "I see the sea and throw patience to the desert" </h4>
+                    <h4>*The direct translation of the 2nd part of this line is: "throw patience to the desert" </h4>
+                    <!-- <br> -->
+                    <!-- <hr> -->
                     <br>
-                    <hr>
-                    <br>
-                    <h3>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
-                    <br>
-                    <h3>Rock arrangement of the song:</h3>
+                    <h4>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
+                    <h4>Rock arrangement of the song:</h3>
                     <br>
                     <iframe 
                     width=100% 
