--- a/text/translations/rumi-1759/index.html
+++ b/text/translations/rumi-1759/index.html
@@ -75,9 +75,11 @@
                   
                     <style>
                         h4 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
-                            text-align: center;
-                            font-size: 1em;
+                            font-family: 'Lekton'; /* Change to the desired font */
+                            text-align: left;
+                            font-size: 0.75em;
+                            padding-top: 10px;
+                            font-weight: normal;a
                         }
                     </style>
                     <p>&nbsp; </p>
@@ -184,10 +186,9 @@
 
                         
                     </div>
-                    <hr>
                     <p> &nbsp; </p>
                     <!-- <center><h3>Translations by Saam Hamidi</h3></center> -->
-                    <h3>* May also be interpreted as "moon"</h3>
+                    <h4>* May also be interpreted as "moon"</h3>
                     <style>
                         h3 {
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
