--- a/about/index.html
+++ b/about/index.html
@@ -59,6 +59,11 @@
                             font-size: 1em;
                             font-weight: normal;
                         }
+                        h1 {
+                            font-family:'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-size: 2em;
+                            font-weight: normal;
+                        }
                     </style>
                     <p> &nbsp; </p>
                     <!-- <em> At some point, from some angle, everything appears to have a few strange traits—mysterious and bizarre. </em> -->
@@ -72,11 +77,11 @@
                     <!-- <p> &nbsp; </p> -->
 
                     <div class="gallery">
-                        <img src="photos/P1080971-2.jpg">
+                        <img src="photos/P1080971-Enhanced-NR-2-min.jpg">
                     </div>
-                    <p>— Saam Hamidi</p>
+                    <h1>Saam Hamidi —</h1>
                     <br>
-                    <p>Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
+                    <p> Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
                     <style>
                         p {
                             font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
