--- a/taiko/performances/blossom-bash/index.html
+++ b/taiko/performances/blossom-bash/index.html
@@ -70,8 +70,9 @@
                         h4 {
                             font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1.2em;
+                            font-size: 2em;
                             padding-top: 10px;
+                            font-weight: normal;
                         }
                     </style>
 
