--- a/sound/music/index.html
+++ b/sound/music/index.html
@@ -117,11 +117,9 @@
 
                     <style>
                         h4 {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
-                            text-align: left;
-                            font-size: 1.2em;
-                            padding-top: 10px;
-                            font-weight: 0;
+                               font-family:'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-size: 2em;
+                            font-weight: normal;
                         }
                     </style>
 
