--- a/index.html
+++ b/index.html
@@ -255,20 +255,14 @@
                 /> -->
 
                 </div>
-                <!-- <a href="/about/">
+                <a href="/about/">
                 <img
-                src="./assets/Group 15(3).svg"
+                src="./assets/ABOUT(1).svg"
                 class="c_about-text"
                 draggable="false"
               unselectable="on"
                 />
-                <img
-                src="./assets/ABOUTCODE.svg"
-                class="c_about-code"
-                draggable="false"
-              unselectable="on"
-                />
-              </a> -->
+                 </a>
               </div>
               <div>
                 <link href="./c_text.css" rel="stylesheet" />
