--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -163,12 +163,12 @@
                         }
                     </style>
 
-                    <h4>*The direct translation of the 2nd part of this line is: "throw patience to the desert" </h4>
+                    <h4>*The direct translation of this line is: "I see the sea and throw patience to the desert" </h4>
                     <!-- <br> -->
                     <!-- <hr> -->
-                    <br>
+
                     <h4>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
-                    <h4>Rock arrangement of the song:</h3>
+                    <h4>Rock version:</h3>
                     <br>
                     <iframe 
                     width=100% 
