--- a/performance.html
+++ b/performance.html
@@ -11,10 +11,10 @@
         <center><h4></h4></center>
         <style>
             small {
-                font-family: Rajdhani, sans-serif; /* Change to the desired font */
+                font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
                 text-align: right;
-                font-weight:normal;
-                font-size: 0.66em;
+                font-weight:bold;
+                font-size: 0.75em;
                 padding-inline-start: 0%;
             }
         </style>
