--- a/text/translations/rumi-1759/index.html
+++ b/text/translations/rumi-1759/index.html
@@ -70,6 +70,7 @@
                         h2 {
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
                             text-align: center;
+                            font-size: 2em;
                         }
                     </style>
                   
