--- a/visual/gallery/index.html
+++ b/visual/gallery/index.html
@@ -50,6 +50,7 @@
                             font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-weight: normal;
+                            font-size: 2em;
                         }
                     </style>
                     <center><h4></h4></center>
