--- a/performance.html
+++ b/performance.html
@@ -12,9 +12,9 @@
         <center><h4></h4></center>
         <style>
             small {
-                font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                font-family: 'Lekton', sans-serif; /* Change to the desired font */
                 text-align: right;
-                font-weight:bold;
+                font-weight:1;
                 font-size: 0.75em;
                 padding-inline-start: 0%;
             }
