--- a/about/index.html
+++ b/about/index.html
@@ -85,8 +85,9 @@
                     <p> Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
                     <style>
                         p {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-family: 'Inter', sans-serif; /* Change to the desired font */
                             text-align: left;
+                            font-size: 1em;
                         }
                     </style>
                     <p>&nbsp; </p>
