--- a/navbar.html
+++ b/navbar.html
@@ -66,6 +66,7 @@
         <div class="dropdown" id="sound">
             <!-- <a href="/sound/programming" class="submenu" id="music-sub3">&nbsp;&nbsp;&nbsp;&nbsp;Programs</a>
             <a href="/sound/hrtf" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Instruments</a> -->
+            <a href="/sound/works" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Works</a>
             <a href="/sound/music" class="submenu" id="music-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Music</a>
     
         </div>
