--- a/taiko/performances/yamane-omiyage/index.html
+++ b/taiko/performances/yamane-omiyage/index.html
@@ -81,9 +81,9 @@
 
                     <style>
                         h3 {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-family: 'Inter', sans-serif; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1em;
+                            font-size: 0.9em;
                             padding-top: 10px;
                             font-weight: 1;
                         }
