--- a/taiko/performances/blossom-bash/index.html
+++ b/taiko/performances/blossom-bash/index.html
@@ -159,13 +159,13 @@
 
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
     .text {
         font-family: 'Inter', sans-serif;
         font-size: 1.125em;
         
     }
-}
+} */
 
 </style>
 
