--- a/sound/programs/hrtf-tracking/index.html
+++ b/sound/programs/hrtf-tracking/index.html
@@ -186,13 +186,13 @@
 
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
     .text {
         font-family: 'Inter', sans-serif;
         font-size: 1.125em;
         
     }
-}
+} */
 
 }
 
