--- a/navbar.html
+++ b/navbar.html
@@ -34,11 +34,12 @@
     
     <li>
         <a href="#" class="dropdown-toggle" data-dropdown="taiko">
-            <span class="dropdown-icon">&#9662;</span> Taiko
+            <span class="dropdown-icon">&#9662;</span> Music
         </a>
         <div class="dropdown" id="taiko">
-            <a href="/taiko/performances" class="submenu" id="taiko-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Performances</a>
+            <a href="/music/performances" class="submenu" id="taiko-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Performances</a>
             <!-- <a href="/taiko/compositions" class="submenu" id="taiko-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Compositions</a> -->
+            <a href="/music/tracks" class="submenu" id="taiko-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Tracks</a>
         </div>
     </li>
     <li>
@@ -61,13 +62,12 @@
     </li>
     <li>
         <a href="#" class="dropdown-toggle" data-dropdown="sound">
-            <span class="dropdown-icon">&#9662;</span> Sound
+            <span class="dropdown-icon">&#9662;</span> Tech
         </a>
         <div class="dropdown" id="sound">
             <!-- <a href="/sound/programming" class="submenu" id="music-sub3">&nbsp;&nbsp;&nbsp;&nbsp;Programs</a>
             <a href="/sound/hrtf" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Instruments</a> -->
-            <a href="/sound/programs" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Programs</a>
-            <a href="/sound/music" class="submenu" id="music-sub2">&nbsp;&nbsp;&nbsp;&nbsp;Music</a>
+            <a href="/technology/programs" class="submenu" id="music-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Programs</a>
     
         </div>
     </li>
