--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 <div class="c_photo2-instance">
                   <a href="/visual/gallery/">
                 <picture>
-                  <source srcset="./assets/Camera(1).svg" media="(max-width: 760px)">
+                  <source srcset="./assets/Camera.svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Camera(1).svg"
+                    src="./assets/Camera.svg"
                     width="176"
                     height="394"
                     class="c_photo2-rectangle"
@@ -303,9 +303,9 @@
                 <a href="/sound/music">
                 <div class="c_music3-instance">
                   <picture> 
-                    <source srcset="./assets/Headphone(3).svg" media="(max-width: 760px)">
+                    <source srcset="./assets/Headphone.svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Headphone(3).svg"
+                    src="./assets/Headphone.svg"
                     width="156"
                     height="354"
                     class="c_music3-rectangle"
