--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <div>
                 <link href="./c_taiko3.css" rel="stylesheet" />
                 <div class="c_taiko3-instance">
-                  <a href="/taiko/performances/yamane-omiyage/">
+                  <a href="/music/performances/yamane-omiyage/">
                   <picture>
                     <source srcset="./assets/Handle.svg" media="(max-width: 760px)">
                   <img
@@ -223,9 +223,9 @@
                 <div class="c_photo2-instance">
                   <a href="/visual/gallery/">
                 <picture>
-                  <source srcset="./assets/Camera.svg" media="(max-width: 760px)">
+                  <source srcset="./assets/Camera(2).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Camera.svg"
+                    src="./assets/Camera(2).svg"
                     width="176"
                     height="394"
                     class="c_photo2-rectangle"
@@ -300,7 +300,7 @@
 
               <div>
                 <link href="./c_music3.css" rel="stylesheet" />
-                <a href="/sound/music">
+                <a href="/technology/programs/hrtf-tracking/">
                 <div class="c_music3-instance">
                   <picture> 
                     <source srcset="./assets/Headphone.svg" media="(max-width: 760px)">
