--- a/music/performances/yamane-omiyage/index.html
+++ b/music/performances/yamane-omiyage/index.html
@@ -122,9 +122,9 @@
                     </div>
                 
                     <h4>Performers </h4>
-                    <h5>Odaiko:  Alison Liu </h5>
-                    <h5>Shime-Okedo:  Henry Helmuth, Jii, Kade Kaneshiro </h5>
-                    <h5>Chudaiko: Austin Ma, Jeff Onuma, Saam Hamidi, Reika Shimizu</h5>
+                    <h5>Odaiko:  Alison Liu <br>
+                    Shime-Okedo:  Henry Helmuth, Jii, Kade Kaneshiro <br>
+                    Chudaiko: Austin Ma, Jeff Onuma, Saam Hamidi, Reika Shimizu</h5>
                     <style>
                         h5 {
                             font-family: 'Inter'; /* Change to the desired font */
@@ -132,7 +132,8 @@
                             font-size: 0.75em;
                             padding-top: 10px;
                             font-weight: normal;
-                            line-height: 1.5;
+                            line-height: 2em;
+                            
                         }
                     </style>
                     <style>
