--- a/music/performances/blossom-bash/index.html
+++ b/music/performances/blossom-bash/index.html
@@ -107,8 +107,8 @@
                     </div>
                 
                     <h4>Performers </h4>
-                    <h5>1st Soloist: Brayden Tanji </h5>
-                    <h5>2nd Soloist: Saam Hamidi </h5>
+                    <h5>1st Soloist: Brayden Tanji <br>
+                    2nd Soloist: Saam Hamidi </h5>
                     <style>
                         h5 {
                             font-family: 'Inter'; /* Change to the desired font */
@@ -116,6 +116,7 @@
                             font-size: 0.75em;
                             padding-top: 10px;
                             font-weight: normal;
+                            line-height: 2em;
                         }
                     </style>
                     <style>
