--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -81,7 +81,7 @@
                             font-size: 0.75em;
                             padding-top: 10px;
                             font-weight: normal;
-                            line-height: 1.5;
+                            line-height: 1.55;
                         }
                     </style>
                     <p>&nbsp; </p>
@@ -169,8 +169,8 @@
                     <!-- <br> -->
                     <!-- <hr> -->
 
-                    <h4>Translation of the poem featured in Niaz Nawab's song "Darya" </h3>
-                    <h4>Rock version:</h3>
+                    <h4>Translation of the poem featured in Niaz Nawab's song "Darya" <br>
+                    Rock version:</h3>
                     <br>
                     <iframe 
                     width=100% 
