--- a/music/tracks/index.html
+++ b/music/tracks/index.html
@@ -115,9 +115,9 @@
                       </style> -->
                     <style>
                         h3 {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-family: 'Inter', sans-serif; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1em;
+                            font-size: 0.9em;
                             padding-top: 10px;
                             font-weight: 1;
                             line-height: 1.55;
