--- a/music/tracks/index.html
+++ b/music/tracks/index.html
@@ -46,7 +46,7 @@
                     <!-- <center><h2>Performances</h2></center> -->
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-weight: normal;
                             font-size: 1.75em;
@@ -94,7 +94,7 @@
 
                     <style>
                         h4 {
-                               font-family:'Sansation Light', sans-serif; /* Change to the desired font */
+                               font-family:'Share Tech', sans-serif; /* Change to the desired font */
                             font-size: 1.3em;
                             font-weight: normal;
                         }
