--- a/technology/programs/hrtf-tracking/index.html
+++ b/technology/programs/hrtf-tracking/index.html
@@ -55,13 +55,14 @@
                     <!-- <center><h2>Performances</h2></center> -->
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-size: 1.75em;
+                            padding-bottom: 10px;
                         }
                     </style>
                     <h2>Multi-source real-time HRTF processing with head tracking</h2>
-                    <hr>
+                    <!-- <hr> -->
                     <!-- <h1> 04-07-2024 </h1> -->
                     <br>
                     
@@ -69,11 +70,12 @@
 
                     <style>
                         h4 {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: left;
                             font-size: 1.3em;
                             padding-top: 10px;
-                            font-weight: normal;
+                            font-weight: 0;
+                            
                         }
                     </style>
 
