--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
                     <center><h2>About</h2></center>
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-weight: normal;
                             font-size: 1.75em;
