--- a/music/performances/blossom-bash/index.html
+++ b/music/performances/blossom-bash/index.html
@@ -56,24 +56,24 @@
                     <!-- <center><h2>Performances</h2></center> -->
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-size: 1.75em;
                         }
                     </style>
                     <h2>Blossom Bash</h2>
-                    <hr>
+                    <!-- <hr> -->
                     <h1> 04-07-2024 </h1>
                     
                     <h4>Info </h4>
 
                     <style>
                         h4 {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: left;
                             font-size: 1.3em;
                             padding-top: 10px;
-                            font-weight: normal;
+                            font-weight: 1;
                         }
                     </style>
 
@@ -131,9 +131,9 @@
                     
                     <style>
                         h1 {
-                            font-family: 'Sansation Light', sans-serif; /* Change to the desired font */
-                            text-align: right;
-                            font-size: 0.8em;
+                            font-family: 'Lekton', sans-serif; /* Change to the desired font */
+                            text-align: center;
+                            font-size: 1em;
                             padding-top: 5px;
                             font-weight: 1;
                         }
