--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -55,12 +55,12 @@
 
                 <div class="text">
                     <h2>Ghazal 348</h2>
-                    <hr>
+                    <!-- <hr> -->
                     <style>
                         h1 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
-                            font-size: 1.25em;
+                            font-size: 1.125em;
                             padding-top: 5px;
                             font-weight: 1;
                         }
@@ -68,7 +68,7 @@
                     <h1>Hafez</h1>
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-size: 1.75em;
                         }
@@ -85,6 +85,7 @@
                         }
                     </style>
                     <p>&nbsp; </p>
+                    <br>
                     
 
                     
