--- a/text/translations/rumi-1759/index.html
+++ b/text/translations/rumi-1759/index.html
@@ -55,12 +55,12 @@
 
                 <div class="text">
                     <h2>Ghazal 1759</h2>
-                    <hr>
+                    
                     <style>
                         h1 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
-                            font-size: 1.2em;
+                            font-size: 1.125em;
                             padding-top: 5px;
                             font-weight: 1;
                         }
@@ -68,7 +68,7 @@
                     <h1>Rumi</h1>
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-size: 1.75em;
                         }
@@ -84,6 +84,7 @@
                         }
                     </style>
                     <p>&nbsp; </p>
+                    <br>
                     
                     <div class="text-container">
                         <div class="text2">
