--- a/visual/gallery/index.html
+++ b/visual/gallery/index.html
@@ -47,7 +47,7 @@
                     <center><h2>Gallery</h2></center>
                     <style>
                         h2 {
-                            font-family: 'Rajdhani', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: center;
                             font-weight: normal;
                             font-size: 1.75em;
