--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -91,7 +91,8 @@
                     
                     <div class="text-container">
                         <div class="text2">
-                            Sea that I weep gaze past, aside my patience cast*
+                            <!-- Sea that in my gaze past, aside my patience cast* -->
+                            The sea that I gaze past, and to wind my patience cast*
                             <br>
                             And in there doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -99,7 +100,7 @@
                             <br>
                             That upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            Joy's place is there where the beloved is there
+                            Joy's spring is there where the beloved is there
                             <br>
                             I make haste that I may myself be there cast
                             <p>&nbsp; </p>
