--- a/text/translations/rumi-1759/index.html
+++ b/text/translations/rumi-1759/index.html
@@ -92,7 +92,7 @@
                             <br>
                             When will I see my self as I am?
                             <p>&nbsp; </p>
-                            You said, ought secrets be center of talk
+                            You said, secrets ought be center of talk
                             <br>
                             Where is center in this center that I am?
                             <p>&nbsp; </p>
@@ -112,11 +112,11 @@
                             <br>
                             To no profit and no loss that I am
                             <p>&nbsp; </p>
-                            I said, oh dear you are my likeness, he said
+                            I said, oh dear you are my likeness. Said he
                             <br>
                             What is likeness in this that I am?
                             <p>&nbsp; </p>
-                            I said, you are so, he said, silence—
+                            I said, you are so. Said he, silence—
                             <br>
                             No tongue knows of that which I am
                             <p>&nbsp; </p>
