--- a/technology/programs/hrtf-tracking/index.html
+++ b/technology/programs/hrtf-tracking/index.html
@@ -72,8 +72,9 @@
                         h4 {
                             font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1.3em;
+                            font-size: 1.5em;
                             padding-top: 10px;
+                            padding-bottom: 10px;
                             font-weight: 1;
                             
                         }
