--- a/technology/programs/hrtf-tracking/index.html
+++ b/technology/programs/hrtf-tracking/index.html
@@ -70,11 +70,11 @@
 
                     <style>
                         h4 {
-                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
+                            font-family: 'Inter', sans-serif; /* Change to the desired font */
                             text-align: left;
                             font-size: 1.5em;
-                            padding-top: 10px;
-                            padding-bottom: 10px;
+                            padding-top: 15px;
+                            padding-bottom: 5px;
                             font-weight: 1;
                             
                         }
