--- a/technology/programs/hrtf-tracking/index.html
+++ b/technology/programs/hrtf-tracking/index.html
@@ -70,9 +70,9 @@
 
                     <style>
                         h4 {
-                            font-family: 'Inter', sans-serif; /* Change to the desired font */
+                            font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1.5em;
+                            font-size: 1.4em;
                             padding-top: 15px;
                             padding-bottom: 5px;
                             font-weight: 1;
