--- a/music/performances/yamane-omiyage/index.html
+++ b/music/performances/yamane-omiyage/index.html
@@ -72,10 +72,10 @@
                         h4 {
                             font-family: 'Share Tech', sans-serif; /* Change to the desired font */
                             text-align: left;
-                            font-size: 1.3em;
-                            padding-top: 10px;
+                            font-size: 1.4em;
+                            padding-top: 15px;
+                            padding-bottom: 5px;
                             font-weight: 1;
-                            letter-spacing:0px;
                             
                             
                         }
