--- a/music/tracks/index.html
+++ b/music/tracks/index.html
@@ -94,9 +94,12 @@
 
                     <style>
                         h4 {
-                               font-family:'Share Tech', sans-serif; /* Change to the desired font */
-                            font-size: 1.3em;
-                            font-weight: normal;
+                           font-family: 'Share Tech', sans-serif; /* Change to the desired font */
+                            text-align: left;
+                            font-size: 1.4em;
+                            padding-top: 15px;
+                            padding-bottom: 5px;
+                            font-weight: 1;
                         }
                     </style>
 
