--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -92,7 +92,7 @@
                     <div class="text-container">
                         <div class="text2">
                             <!-- Sea that in my gaze past, aside my patience cast* -->
-                            The sea that I gaze past, and to wind my patience cast*
+                            The sea I gaze past, and to wind my patience cast*
                             <br>
                             And in there doing, my heart to sea cast
                             <p>&nbsp; </p>
@@ -100,7 +100,7 @@
                             <br>
                             That upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            Joy's spring is there where the beloved is there
+                            Such joy is there where the beloved is there
                             <br>
                             I make haste that I may myself be there cast
                             <p>&nbsp; </p>
