--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -98,7 +98,7 @@
                             <p>&nbsp; </p>
                             From this yearning, sinner’s heart I heave a sigh
                             <br>
-                            That upon the sin of Adam and Eve fire cast
+                            Upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
                             Such joy is there where the beloved is there
                             <br>
