--- a/navbar.html
+++ b/navbar.html
@@ -48,8 +48,10 @@
         </a>
         <div class="dropdown" id="visual">
             <a href="/visual/gallery" class="submenu" id="photography-sub1">&nbsp;&nbsp;&nbsp;&nbsp;Gallery</a>
+            <a href="/visual/design" class="submenu" id="photography-sub4">&nbsp;&nbsp;&nbsp;&nbsp;Design</a>
             <a href="/visual/people" class="submenu" id="photography-sub2">&nbsp;&nbsp;&nbsp;&nbsp;People</a>
             <a href="/visual/archive" class="submenu" id="photography-sub3">&nbsp;&nbsp;&nbsp;&nbsp;Archive</a>
+            
         </div>
     </li>
     <li>
