--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <div>
                 <link href="./c_photo2.css" rel="stylesheet" />
                 <div class="c_photo2-instance">
-                  <a href="/visual/gallery/">
+                  <a href="/visual/design/">
                 <picture>
                   <source srcset="./assets/Camera(2).svg" media="(max-width: 760px)">
                   <img
